@@ -1,0 +1,4 @@
+module Cerberus
+  module Builder
+  end
+end
